# frotz

./: .gitignore  README.md  pyproject.toml
examples/simple/: play_tangle_z8.py
examples/stories/: play_spider_and_web.py
pyfrotz/: __init__.py  __main__.py  dictionary.py  header.py  instructions.py  io.py  memory.py  objects.py  opcodes.py  quetzal.py  screen.py  stack.py  zmachine.py
pyfrotz/tests/: test_tangle.py
src/pyfrotz/: __init__.py  __main__.py  dictionary.py  header.py  instructions.py  memory.py  objects.py  opcodes.py  quetzal.py  screen.py  stack.py  text.py  zmachine.py
stories/: the-first-mile-test-drive.z8
tests/: Tangle.z5  Tangle.z8  test_spider_and_web.py  test_tangle.py  test_z8_games.py
