[project]
name = "pyfrotz"
version = "0.1.0"
description = "A Python Z-Machine interpreter"
readme = "README.md"
authors = [
    { name = "spookyuser", email = "16196262+spookyuser@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
pyfrotz = "pyfrotz.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
